--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,11 @@
             <button type="submit">Cycle LEDs</button>
         </form>
     </li>
+    <li>
+        <form name="cycle" method="post" action="/ledCommand/oneByOneOn">
+            <button type="submit">One by one LED on</button>
+        </form>
+    </li>
 </ul>
 
 </body>
