--- a/public/index.html
+++ b/public/index.html
@@ -8,16 +8,6 @@
 <ul>
     <h2>LED Commands</h2>
     <li>
-        <form name="toggle" method="post" action="/ledCommand/toggle">
-            <button type="submit">Toggle LED</button>
-        </form>
-    </li>
-    <li>
-        <form name="pulse" method="post" action="/ledCommand/pulse">
-            <button type="submit">Pulse LED</button>
-        </form>
-    </li>
-    <li>
         <form name="cycle" method="post" action="/ledCommand/cycle">
             <button type="submit">Cycle LEDs</button>
         </form>
@@ -25,6 +15,11 @@
     <li>
         <form name="cycle" method="post" action="/ledCommand/oneByOneOn">
             <button type="submit">One by one LED on</button>
+        </form>
+    </li>
+    <li>
+        <form name="cycle" method="post" action="/ledCommand/cycleMiddleOut">
+            <button type="submit">Cycle LED from middle</button>
         </form>
     </li>
 </ul>
